SortOrderTest: use new collections static APIs